# shinka

./: README.rst  pyproject.toml
tests/: test_shinka.py
